--- a/tomcat-demo/pom.xml
+++ b/tomcat-demo/pom.xml
@@ -29,7 +29,8 @@
 	<dependency>
 	    <groupId>tomcat</groupId>
 	    <artifactId>catalina</artifactId>
-	    <version>4.0.6</version>
+	    <version>4.1.34</version>
+	    <scope>compile</scope>
 	</dependency>
   </dependencies>
 </project>
