--- a/tomcat-demo/pom.xml
+++ b/tomcat-demo/pom.xml
@@ -29,8 +29,22 @@
 	<dependency>
 	    <groupId>tomcat</groupId>
 	    <artifactId>catalina</artifactId>
-	    <version>4.1.34</version>
+	    <version>4.1.9</version>
 	    <scope>compile</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/tomcat/naming-factory -->
+	<dependency>
+	    <groupId>tomcat</groupId>
+	    <artifactId>naming-factory</artifactId>
+	    <version>4.0.6</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/tomcat/naming-resources -->
+	<dependency>
+	    <groupId>tomcat</groupId>
+	    <artifactId>naming-resources</artifactId>
+	    <version>4.1.31</version>
+	</dependency>
+	
   </dependencies>
 </project>
