--- a/tomcat-demo/pom.xml
+++ b/tomcat-demo/pom.xml
@@ -21,6 +21,12 @@
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.3</version>
 	</dependency>
+	<!-- <dependency>
+	    <groupId>tomcat</groupId>
+	    <artifactId>catalina</artifactId>
+	    <version>4.1.9</version>
+	    <scope>compile</scope>
+	</dependency> -->
 	<dependency>
 	    <groupId>tomcat</groupId>
 	    <artifactId>catalina</artifactId>
