--- a/tomcat-demo/pom.xml
+++ b/tomcat-demo/pom.xml
@@ -27,13 +27,11 @@
 	    <version>4.1.9</version>
 	    <scope>compile</scope>
 	</dependency> -->
-	<dependency>
+	<!-- <dependency>
 	    <groupId>tomcat</groupId>
 	    <artifactId>catalina</artifactId>
 	    <version>4.1.9</version>
 	    <scope>compile</scope>
-	</dependency>
-	
-
+	</dependency> -->
   </dependencies>
 </project>
