--- a/tomcat-demo/webapps/app1/WEB-INF/web.xml
+++ b/tomcat-demo/webapps/app1/WEB-INF/web.xml
@@ -5,20 +5,24 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
+  
   <servlet>
     <servlet-name>Modern</servlet-name>
     <servlet-class>ModernServlet</servlet-class>
+  </servlet> 
+   <servlet>
+    <servlet-name>Session</servlet-name>
+    <servlet-class>SessionServlet</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>Primitive</servlet-name>
-    <servlet-class>PrimitiveServlet</servlet-class>
-  </servlet>
+  
+  
   <servlet-mapping>
     <servlet-name>Modern</servlet-name>
     <url-pattern>/Modern</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>Primitive</servlet-name>
-    <url-pattern>/Primitive</url-pattern>
+    <servlet-name>Session</servlet-name>
+    <url-pattern>/SessionServlet</url-pattern>
   </servlet-mapping>
+  
 </web-app>
